# set_replication

./: .set_replication.aux  README.rst  SetReplicationCore.hs  set_replication.v
demo/: .gitignore  bin  demo.cabal  stack.yaml
demo/app/: Main.hs  Set_replication_core.hs
report/: .gitignore  Makefile  report.bib  report.tex
