name:                demo
version:             0.1.0.0
license:             MIT
author:              Ted Yin
maintainer:          tederminant@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

executable demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , distributed-process-extras
                     , network-transport
                     , network-transport-tcp
                     , bytestring
                     , binary
                     , random
                     , demo
  other-modules:     SetReplicationCore
  default-language:    Haskell2010
